--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -134,13 +134,14 @@
   align-items: center;
   gap: 40px;
 
-  .create-new, .join {
+  .create-new,
+  .join {
     width: 140px;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: $color-pink;
     color: $color-white;
-    border: 1px solid $color-white;
+    border: none;
     cursor: pointer;
   }
 
@@ -165,6 +166,59 @@
 
     .black {
       background-color: $color-black;
+    }
+  }
+
+  .waiting {
+    > p:first-child {
+      text-align: center;
+      opacity: 0.8;
+      font-size: 24px;
+    }
+
+    > p:nth-child(2) {
+      margin-bottom: 5px;
+      opacity: 0.9;
+    }
+
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .id {
+        margin-top: 0;
+        font-size: 20px;
+      }
+
+      button {
+        margin: auto;
+        width: 100px;
+        height: 25px;
+        border-radius: 10px;
+        color: white;
+        background-color: #131313;
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+
+        &:hover {
+          background-color: lighten(#131313, 5%);
+        }
+      }
+    }
+  }
+
+  .join-container {
+    text-align: center;
+
+    input {
+      padding-left: 5px;
+      height: 20px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      color: white;
+      background-color: #131313;
     }
   }
 }
