--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,9 +1,9 @@
-$color-pink: #8C264C;
+$color-pink: #30475E;
 $color-dark-gray: #1d1d1d;
 $color-black: #000000;
 $color-white: #ffffff;
 $color-text: #d8dce0;
-$color-blue: #812299;
+$color-blue: darken(lightgray, 10%);
 
 $playfield: calc(min(700px, 90vw));
 $tile: calc((#{$playfield} - 30px - 12px * 8) / 9);
