--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,224 +1,8 @@
-//  pages
-
 //  components
+@import "components/menu";
+@import "components/playfield";
+@import "components/ui";
+@import "components/toast";
 
 //  miscellaneous
-@import 'variables';
 @import 'common';
-
-.wrapper {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
-.info {
-  width: 100%;
-  height: fit-content;
-}
-
-.playfield {
-  width: $playfield;
-  height: fit-content;
-  border-radius: 5px;
-  background-color: $color-dark-gray;
-  box-shadow: rgba($color-black, 65%) 0 0 15px;
-  padding: 15px;
-}
-
-.end-screen {
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: rgba($color-black, 65%) 0 0 15px;
-}
-
-.row {
-  width: 100%;
-  display: flex;
-  height: fit-content;
-
-  &.small {
-    height: fit-content;
-    display: flex;
-    align-items: center;
-  }
-}
-
-.tile {
-  background-color: $color-pink;
-  border-radius: 5px;
-  width: $tile;
-  height: $tile;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.wall {
-  background-color: $color-blue;
-  opacity: 0;
-
-  &.horizontal {
-    margin: 2px 0;
-    width: $wall-horizontal-width;
-    height: $wall-horizontal-height;
-  }
-
-  &.vertical {
-    margin: 0 2px;
-    width: $wall-vertical-width;
-    height: $wall-vertical-height;
-  }
-
-  &.hovered,
-  &.placed {
-    opacity: 1;
-    cursor: pointer;
-  }
-}
-
-.intersection {
-  background-color: $color-blue;
-  width: $intersection;
-  height: $intersection;
-  opacity: 0;
-  margin: 0 1.88px;
-
-  &.horizontal {
-    height: 10px;
-    margin-top: 2px;
-  }
-
-  &.hovered,
-  &.placed {
-    opacity: 1;
-    cursor: pointer;
-  }
-}
-
-.player {
-  width: 70%;
-  height: 70%;
-  border-radius: 50%;
-  background-color: $color-black;
-}
-
-.enemy {
-  width: 70%;
-  height: 70%;
-  border-radius: 50%;
-  background-color: $color-white;
-}
-
-.upsideDown {
-  transform: rotate(180deg);
-}
-
-.menu {
-  width: 600px;
-  height: fit-content;
-  padding: 20px;
-  background-color: $color-dark-gray;
-  box-shadow: rgba($color-black, 65%) 0 0 15px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-
-  .create-new,
-  .join {
-    width: 140px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: $color-pink;
-    color: $color-white;
-    border: none;
-    cursor: pointer;
-  }
-
-  .player-select {
-    display: flex;
-    width: 100%;
-    height: fit-content;
-    align-items: center;
-    justify-content: center;
-
-    div {
-      width: 60px;
-      height: 60px;
-      margin: 0 20px 15px 20px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-
-    .white {
-      background-color: $color-white;
-    }
-
-    .black {
-      background-color: $color-black;
-    }
-  }
-
-  .waiting {
-    > p:first-child {
-      text-align: center;
-      opacity: 0.8;
-      font-size: 24px;
-    }
-
-    > p:nth-child(2) {
-      margin-bottom: 5px;
-      opacity: 0.9;
-    }
-
-    div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .id {
-        margin-top: 0;
-        font-size: 20px;
-      }
-
-      button {
-        margin: auto;
-        width: 100px;
-        height: 25px;
-        border-radius: 10px;
-        color: white;
-        background-color: #131313;
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        cursor: pointer;
-
-        &:hover {
-          background-color: lighten(#131313, 5%);
-        }
-      }
-    }
-  }
-
-  .join-container {
-    text-align: center;
-
-    input {
-      padding-left: 5px;
-      height: 20px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      color: white;
-      background-color: #131313;
-    }
-  }
-}
