--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,8 +1,8 @@
 //  components
-@import "components/menu";
-@import "components/playfield";
-@import "components/ui";
-@import "components/toast";
+@import 'components/menu';
+@import 'components/playfield';
+@import 'components/ui';
+@import 'components/toast';
 
 //  miscellaneous
 @import 'common';
