--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,15 +1,31 @@
-$color-pink: #30475E;
-$color-dark-gray: #1d1d1d;
 $color-black: #000000;
+$color-darker-gray: #131313;
+$color-dark-gray: #1d1d1d;
+$color-light-gray: #d3d3d3;
 $color-white: #ffffff;
+
 $color-text: #d8dce0;
-$color-blue: darken(lightgray, 10%);
+$color-toast: #2b2b2b;
+$color-main: #30475e;
+$color-selection: $color-main;
 
-$playfield: fit-content;
-$tile: 62px;
+$border-radius-medium: 5px;
+$border-radius-large: 10px;
+$border-radius-x-large: 15px;
+$border-radius-xx-large: 20px;
+$border-radius-round: 50%;
 
-$wall-horizontal-width: $tile;
+$playfield-width: fit-content;
+$playfield-height: fit-content;
+$tile-width: 62px;
+$tile-height: 62px;
+$wall-horizontal-width: $tile-width;
 $wall-horizontal-height: 10px;
 $wall-vertical-width: 10px;
-$wall-vertical-height: $tile;
-$intersection: 10px;
+$wall-vertical-height: $tile-height;
+$intersection-width: 10px;
+$intersection-height: 10px;
+
+$font-family-apple: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+  'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+$font-family-code: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
