--- a/src/css/components/menu.scss
+++ b/src/css/components/menu.scss
@@ -1,32 +1,37 @@
-@import "../variables";
+@import '../variables';
 
 .end-screen {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  border-radius: 15px;
+  border-radius: $border-radius-x-large;
   box-shadow: rgba($color-black, 65%) 0 0 15px;
 
+  p {
+    font-size: 24px;
+    margin: 10px 0;
+    opacity: 0.7;
+  }
+
   img {
-    width: 300px;
+    width: 450px;
     height: auto;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin: 20px 0;
   }
 
   button {
     width: 100px;
     height: 25px;
-    border-radius: 10px;
-    color: white;
-    background-color: #131313;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: $border-radius-large;
+    color: $color-white;
+    background-color: $color-darker-gray;
+    border: 1px solid rgba($color-white, 0.5);
     cursor: pointer;
     margin-top: 20px;
 
     &:hover {
-      background-color: lighten(#131313, 5%);
+      background-color: lighten($color-darker-gray, 5%);
     }
   }
 }
@@ -37,7 +42,7 @@
   padding: 20px;
   background-color: $color-dark-gray;
   box-shadow: rgba($color-black, 65%) 0 0 15px;
-  border-radius: 10px;
+  border-radius: $border-radius-large;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,8 +52,8 @@
   .join {
     width: 140px;
     height: 40px;
-    border-radius: 20px;
-    background-color: $color-pink;
+    border-radius: $border-radius-xx-large;
+    background-color: $color-main;
     color: $color-white;
     border: none;
     cursor: pointer;
@@ -65,7 +70,7 @@
       width: 60px;
       height: 60px;
       margin: 0 20px 15px 20px;
-      border-radius: 50%;
+      border-radius: $border-radius-round;
       cursor: pointer;
     }
 
@@ -101,17 +106,16 @@
       }
 
       button {
-        margin: auto;
         width: 100px;
         height: 25px;
-        border-radius: 10px;
-        color: white;
-        background-color: #131313;
-        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: $border-radius-large;
+        color: $color-white;
+        background-color: $color-darker-gray;
+        border: 1px solid rgba($color-white, 0.5);
         cursor: pointer;
 
         &:hover {
-          background-color: lighten(#131313, 5%);
+          background-color: lighten($color-darker-gray, 5%);
         }
       }
     }
@@ -121,13 +125,16 @@
     text-align: center;
 
     input {
-      padding-left: 5px;
-      height: 20px;
-      border-radius: 5px;
+      padding: 2px;
+      text-align: center;
+      height: 25px;
+      width: 260px;
+      border-radius: $border-radius-medium;
+      font-size: 13px;
       border: none;
       outline: none;
-      color: white;
-      background-color: #131313;
+      color: $color-white;
+      background-color: $color-darker-gray;
     }
   }
 }
