--- a/src/css/components/menu.module.scss
+++ b/src/css/components/menu.module.scss
@@ -1,41 +1,5 @@
 @import '../variables';
 
-.end-screen {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  border-radius: $border-radius-x-large;
-  box-shadow: rgba($color-black, 65%) 0 0 15px;
-
-  p {
-    font-size: 24px;
-    margin: 10px 0;
-    opacity: 0.7;
-  }
-
-  img {
-    width: 450px;
-    height: auto;
-    margin: 20px 0;
-  }
-
-  button {
-    width: 100px;
-    height: 25px;
-    border-radius: $border-radius-large;
-    color: $color-white;
-    background-color: $color-darker-gray;
-    border: 1px solid rgba($color-white, 0.5);
-    cursor: pointer;
-    margin-top: 20px;
-
-    &:hover {
-      background-color: lighten($color-darker-gray, 5%);
-    }
-  }
-}
-
 .menu {
   width: 600px;
   height: fit-content;
@@ -59,7 +23,7 @@
     cursor: pointer;
   }
 
-  .player-select {
+  .playerSelect {
     display: flex;
     width: 100%;
     height: fit-content;
@@ -121,7 +85,7 @@
     }
   }
 
-  .join-container {
+  .joinCcontainer {
     text-align: center;
 
     input {
