--- a/src/css/components/menu.module.scss
+++ b/src/css/components/menu.module.scss
@@ -1,30 +1,46 @@
 @import '../variables';
 
 .menu {
-  width: 600px;
-  height: fit-content;
+  width: 90%;
+  max-width: 600px;
   padding: 20px;
-  background-color: $color-dark-gray;
-  box-shadow: rgba($color-black, 65%) 0 0 15px;
-  border-radius: $border-radius-large;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 40px;
 
-  .create-new,
+  .return {
+    cursor: pointer;
+    margin-top: 10px;
+    width: fit-content;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .innerContainer {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .createNew,
   .join {
-    width: 140px;
+    width: 150px;
     height: 40px;
     border-radius: $border-radius-xx-large;
-    background-color: $color-main;
     color: $color-white;
-    border: none;
     cursor: pointer;
+  }
+
+  .playerSelectText {
+    margin-left: 30px;
   }
 
   .playerSelect {
     display: flex;
+    gap: 20px;
     width: 100%;
     height: fit-content;
     align-items: center;
@@ -33,7 +49,6 @@
     div {
       width: 60px;
       height: 60px;
-      margin: 0 20px 15px 20px;
       border-radius: $border-radius-round;
       cursor: pointer;
     }
@@ -71,16 +86,7 @@
 
       button {
         width: 100px;
-        height: 25px;
-        border-radius: $border-radius-large;
-        color: $color-white;
-        background-color: $color-darker-gray;
-        border: 1px solid rgba($color-white, 0.5);
-        cursor: pointer;
-
-        &:hover {
-          background-color: lighten($color-darker-gray, 5%);
-        }
+        height: 35px;
       }
     }
   }
@@ -89,15 +95,6 @@
     text-align: center;
 
     input {
-      padding: 2px;
-      text-align: center;
-      height: 25px;
-      width: 260px;
-      border-radius: $border-radius-medium;
-      font-size: 13px;
-      border: none;
-      outline: none;
-      color: $color-white;
       background-color: $color-darker-gray;
     }
   }
