--- a/src/css/components/playfield.module.scss
+++ b/src/css/components/playfield.module.scss
@@ -1,14 +1,13 @@
 @import '../variables';
 
 .playfield {
-  width: 90vw;
-  max-width: 699px;
-  height: $playfield-height;
   border-radius: $border-radius-medium;
   background-color: $color-dark-gray;
   box-shadow: rgba($color-black, 65%) 0 0 15px;
   padding: 15px;
   display: grid;
+  grid-template-columns: repeat(17, auto);
+  place-items: center;
 }
 
 .upsideDown {
