--- a/src/css/global.module.scss
+++ b/src/css/global.module.scss
@@ -1,9 +1,7 @@
 @import 'variables';
 
 .wrapper {
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
