--- a/src/css/components/wall.module.scss
+++ b/src/css/components/wall.module.scss
@@ -44,11 +44,10 @@
   &::before {
     content: '';
     position: absolute;
-    left: -2px;
-    width: 14px;
-    height: 10px;
+    left: -4px;
+    width: 20px;
+    height: 100%;
     background-color: $color-light-gray;
-    display: block;
   }
 }
 
@@ -58,11 +57,10 @@
   &::before {
     content: '';
     position: absolute;
-    top: -2px;
-    width: 10px;
-    height: 14px;
+    top: -4px;
+    width: 100%;
+    height: 20px;
     background-color: $color-light-gray;
-    display: block;
   }
 }
 
@@ -72,21 +70,19 @@
   &::before {
     content: '';
     position: absolute;
-    top: -2px;
+    top: -4px;
     left: 0;
-    width: 10px;
-    height: 14px;
+    width: 100%;
+    height: 20px;
     background-color: $color-light-gray;
-    display: block;
   }
 
   &::after {
     content: '';
     position: absolute;
-    left: -2px;
-    width: 14px;
-    height: 10px;
+    left: -4px;
+    width: 20px;
+    height: 100%;
     background-color: $color-light-gray;
-    display: block;
   }
 }
