--- a/src/css/components/cell.module.scss
+++ b/src/css/components/cell.module.scss
@@ -11,7 +11,7 @@
   &.active {
     cursor: pointer;
 
-    &.canGo {
+    &.can-go {
       &::before {
         content: '';
         display: block;
@@ -31,14 +31,14 @@
   }
 }
 
-.playerOne {
+.player-one {
   width: 70%;
   height: 70%;
   border-radius: $border-radius-round;
   background-color: $color-white;
 }
 
-.playerTwo {
+.player-two {
   width: 70%;
   height: 70%;
   border-radius: $border-radius-round;
