--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -37,3 +37,14 @@ body {
 code {
   font-family: $font-family-code;
 }
+
+noscript {
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  margin: 60px 0;
+  text-align: center;
+  font-size: 24px;
+  font-family: $font-family-apple;
+  color: $color-text;
+}
