--- a/src/css/components/menu.module.scss
+++ b/src/css/components/menu.module.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import '@variables';
 
 .menu {
   width: 90%;
@@ -96,6 +96,7 @@
 
     input {
       background-color: $color-darker-gray;
+      width: min(70vw, 300px);
     }
   }
 }
